# xinqi

./: Cargo.toml  README.md  ai.md  rules.md
src/: main.rs
src/ai/: mcts.rs  mctsv2.rs  mod.rs
src/general/: board.rs  game.rs  mod.rs  piece.rs  step.rs
src/graphics/: entity.rs  interaction.rs  mod.rs
src/hequn/: ai.rs  game.rs  general.rs  mod.rs  utils.rs
src/net/: message.rs  mod.rs  net.rs  types.rs
src/tree/: game_tree.rs  game_tree_event.rs  mod.rs  pgn.rs
src/ui/: mod.rs  ui_game_tree.rs  ui_game_tree_xingxiang.rs  ui_game_tree_zhandi.rs  ui_hequn.rs  ui_menu.rs  ui_sl.rs  ui_sl_xingxiang.rs  ui_sl_zhandi.rs  ui_xingxiang.rs  ui_zhandi.rs
src/xingxiang/: ai.rs  draw.rs  game.rs  general.rs  mod.rs  utils.rs
src/zhandi/: ai.rs  draw.rs  game.rs  general.rs  mod.rs  utils.rs
