[package]
name = "xinqi"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36.0"
lazy_static = "1.5.0"
rand = "0.9.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy-tokio-tasks = "0.16.0"

[profile.dev]
opt-level = 0
debug = true

[profile.dev-opt.package."*"]
opt-level = 3  # 为依赖包启用优化

[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = true

[profile.release.package."*"]
opt-level = 3  # 为依赖包启用优化

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'      # 减小二进制大小
